[package]
name = "too_many_dimensions"
version = "0.1.0"
authors = ["Sean Moulton <bananamoulton@gmail.com>"]
edition = "2018"

[profile.release]
# lto = true

[build-dependencies]
anyhow = "1.0.38"
fs_extra = "1.2.0"
glob = "0.3.0"
rayon = "1.5.0"
shaderc = "0.7.0"

[dependencies]
bytemuck = { version = "1.5.0", features = ["derive"] }
glam = "0.12.0"
memoffset = { version = "0.6.1", features = ["unstable_const"] }
pollster = "0.2.1"
rand = "0.8.1"
rand_xorshift = "0.3.0"
wgpu = { version = "0.7.0" }
winit = "0.24.0"
winit_input_helper = "0.9.0"
