[package]
name = "too_many_dimensions"
version = "0.1.0"
authors = ["Sean Moulton <bananamoulton@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 64
rpath = false

[profile.release]
# lto = true
# panic = 'unwind'
# codegen-units = 1

[build-dependencies]
anyhow = "1.0.38"
fs_extra = "1.2.0"
glob = "0.3.0"
rayon = "1.5.0"
shaderc = "0.7.0"

[dependencies]
async-executor = "1.4.0"
bytemuck = { version = "1.5.0", features = ["derive"] }
chrono = "0.4.19"
flexi_logger = { version = "0.17.1", features = ["compress"] }
glam = "0.12.0"
log = "0.4.4"
log-panics = "2.0.0"
memoffset = { version = "0.6.1", features = ["unstable_const"] }
once_cell = "1.7.1"
num_cpus = "1.13.0"
pollster = "0.2.1"
rand = "0.8.1"
rand_xorshift = "0.3.0"
rayon = "1.5.0"
serde = { version = "1.0.123", features = ["derive"] }
toml = "0.5.8"
wgpu = { version = "0.7.0" }
winit = "0.24.0"
winit_input_helper = "0.9.0"
